2019122101初始化代码

--- a/src/notes/vue/02.md
+++ b/src/notes/vue/02.md
@@ -325,13 +325,13 @@ module.exports = {
 ```javascript
 import Vue from "vue";
 import App from "./App.vue";
-import KvCodeSnippet from "./components/code-snippet";
-import KvHelloWorld from "./components/HelloWorld";
+import HvCodeSnippet from "./components/code-snippet";
+import HvHelloWorld from "./components/HelloWorld";
 import "highlight.js/styles/color-brewer.css";
 
 Vue.config.productionTip = false;
-Vue.component("hv-code-snippet", KvCodeSnippet);
-Vue.component("hv-hello-world", KvHelloWorld);
+Vue.component("hv-code-snippet", HvCodeSnippet);
+Vue.component("hv-hello-world", HvHelloWorld);
 
 new Vue({
   render: h => h(App)
@@ -349,14 +349,14 @@ new Vue({
 </template>
 
 <script>
-  import KvHelloWorld from "./components/HelloWorld";
-  import KvHelloWorldDoc from "./components/HelloWorldDoc.md";
+  import HvHelloWorld from "./components/HelloWorld";
+  import HvHelloWorldDoc from "./components/HelloWorldDoc.md";
 
   export default {
     name: "app",
     components: {
-      KvHelloWorld,
-      KvHelloWorldDoc
+      HvHelloWorld,
+      HvHelloWorldDoc
     }
   };
 </script>
