--- a/src/notes/vue/03.md
+++ b/src/notes/vue/03.md
@@ -1,6 +1,6 @@
-:::snippet KvButton 按钮组件
+:::snippet HvButton 按钮组件
 
-1. `v-bind="$attrs"` 将原生的 `button` 属性绑定在 `KvButton` 直接设置到 `button` 标签上。
+1. `v-bind="$attrs"` 将原生的 `button` 属性绑定在 `HvButton` 直接设置到 `button` 标签上。
 2. `hv-button--type-${property}`根据不同的属性绑定 `class` 生成不同的样式。
 3. `$slots.default` 判断是否设置了默认的 `slot` 插槽来根据内容设置对应的样式。
 4. 通过 `icon` 和 `iconType` 来设置图标和放置位置。
@@ -27,8 +27,8 @@
 
 <script>
   export default {
-    name: "KvButton",
-    componentName: "KvButton",
+    name: "HvButton",
+    componentName: "HvButton",
     props: {
       type: {
         type: String,
@@ -217,23 +217,23 @@
 
 :::
 
-:::snippet KvButton 安装配置
+:::snippet HvButton 安装配置
 
 1. Vue 安装配置 `components/button/index.js`
 
 ```javascript
-import KvButton from "./button.vue";
-KvButton.install = function(Vue) {
-  Vue.component(KvButton.name, KvButton);
+import HvButton from "./button.vue";
+HvButton.install = function(Vue) {
+  Vue.component(HvButton.name, HvButton);
 };
-export default KvButton;
+export default HvButton;
 ```
 
 2. 组件库的安装配置 `packages/index.js`
 
 ```javascript
-import KvButton from "./components/button";
-const components = [KvButton];
+import HvButton from "./components/button";
+const components = [HvButton];
 const install = function(Vue) {
   components.forEach(component => {
     Vue.component(component.name, component);
@@ -242,15 +242,15 @@ const install = function(Vue) {
 export default {
   version: process.env.VERSION,
   install,
-  KvButton
+  HvButton
 };
 ```
 
 3. 引用安装 `main.js`
 
 ```javascript
-import KvWebComponents from "../packages/index.js";
-Vue.use(KvWebComponents);
+import HvWebComponents from "../packages/index.js";
+Vue.use(HvWebComponents);
 ```
 
 4. 编写 md 文档文件 [components/button/index.md](https://raw.githubusercontent.com/huang7000/hv-web-ui/master/packages/components/button/index.md)
@@ -286,7 +286,7 @@ export default new Router({
 
 7. 效果查看 [https://huang7000.github.io/hv-web-ui/#/button](https://huang7000.github.io/hv-web-ui/#/button)
 
-![KvButton演示](../../assets/images/vue-03-01.png)
+![HvButton演示](../../assets/images/vue-03-01.png)
 
 :::
 
@@ -295,9 +295,9 @@ export default new Router({
 1. Vue 打包类库配置,参照 Vue CLI[构建目标](https://cli.vuejs.org/zh/guide/build-targets.html#构建目标)进行类库构建配置入口文件`src/index.js`
 
 ```javascript
-import KvWebComponents from "../packages/index.js";
+import HvWebComponents from "../packages/index.js";
 import "../packages/index.scss";
-export default KvWebComponents;
+export default HvWebComponents;
 ```
 
 2. npm 的 scripts 增加配置
@@ -367,9 +367,9 @@ npm i hv-web-ui -S
 
 ```javascript
 import Vue from "vue";
-import KvWebComponents from "hv-web-ui";
+import HvWebComponents from "hv-web-ui";
 import "hv-web-ui/lib/hv-web-ui.css";
-Vue.use(KvWebComponents);
+Vue.use(HvWebComponents);
 ```
 
 3. 测试
@@ -380,12 +380,12 @@ Vue.use(KvWebComponents);
 
 :::
 
-:::snippet KvGrid 栅格布局
+:::snippet HvGrid 栅格布局
 
-1. 栅格布局拆分 KvRow、KvCol 组件来进行布局排版
-2. KvRow 根据属性设置样式主要设置 flex 布局和对应的相关属性提取为 props
-3. KvCol 获取父组件 gutter 来设置当前组建的间隔和属性生成 class 和 style
-4. KvCol 循环生成 24 栅格样式
+1. 栅格布局拆分 HvRow、HvCol 组件来进行布局排版
+2. HvRow 根据属性设置样式主要设置 flex 布局和对应的相关属性提取为 props
+3. HvCol 获取父组件 gutter 来设置当前组建的间隔和属性生成 class 和 style
+4. HvCol 循环生成 24 栅格样式
 
 ```scss
 @for $i from 0 through 24 {
@@ -406,7 +406,7 @@ Vue.use(KvWebComponents);
 }
 ```
 
-5. KvCol 根据不同的分辨率生成 24 栅格样式
+5. HvCol 根据不同的分辨率生成 24 栅格样式
 
 ```scss
 @media only screen and (max-width: 768px) {
@@ -429,13 +429,13 @@ Vue.use(KvWebComponents);
 }
 ```
 
-6. KvRow
+6. HvRow
 
 ```html
 <script>
   export default {
-    name: "KvRow",
-    componentName: "KvRow",
+    name: "HvRow",
+    componentName: "HvRow",
     props: {
       tag: { type: String, default: "div" },
       gutter: Number,
@@ -533,12 +533,12 @@ Vue.use(KvWebComponents);
 </style>
 ```
 
-7. KvCol
+7. HvCol
 
 ```html
 <script>
   export default {
-    name: "KvCol",
+    name: "HvCol",
     props: {
       span: { type: Number, default: 24 },
       tag: { type: String, default: "div" },
@@ -554,7 +554,7 @@ Vue.use(KvWebComponents);
     computed: {
       gutter() {
         let parent = this.$parent;
-        while (parent && parent.$options.componentName !== "KvRow") {
+        while (parent && parent.$options.componentName !== "HvRow") {
           parent = parent.$parent;
         }
         return parent ? parent.gutter : 0;
