--- a/src/notes/vue/04.md
+++ b/src/notes/vue/04.md
@@ -177,9 +177,9 @@ $--color-primary: #5b3cc4;
 
 ```javascript
 import Vue from "vue";
-import KvWebComponents from "hv-web-ui";
+import HvWebComponents from "hv-web-ui";
 import "./theme.scss";
-Vue.use(KvWebComponents);
+Vue.use(HvWebComponents);
 ```
 
 :::
@@ -225,8 +225,8 @@ Vue.use(KvWebComponents);
 </template>
 <script>
   export default {
-    name: "KvCheckbox",
-    componentName: "KvCheckbox",
+    name: "HvCheckbox",
+    componentName: "HvCheckbox",
     computed: {
       model: {
         get() {
@@ -333,7 +333,7 @@ Vue.use(KvWebComponents);
 
 :::snippet 复选框组
 
-1. 复选框实现了 Boolean 类型基本的 v-model，可能多个复选框绑定到一个数组，将绑定同个数组的放到 KvCheckboxGroup 组件内
+1. 复选框实现了 Boolean 类型基本的 v-model，可能多个复选框绑定到一个数组，将绑定同个数组的放到 HvCheckboxGroup 组件内
 
 ```html
 <template>
@@ -343,8 +343,8 @@ Vue.use(KvWebComponents);
 </template>
 <script>
   export default {
-    name: "KvCheckboxGroup",
-    componentName: "KvCheckboxGroup",
+    name: "HvCheckboxGroup",
+    componentName: "HvCheckboxGroup",
     props: {
       value: {
         type: Array,
@@ -356,7 +356,7 @@ Vue.use(KvWebComponents);
 </script>
 ```
 
-2. 复选框根据是否在 KvCheckboxGroup 中进行判断，计算属性 model 的 get、set 进行对应不同的数据处理
+2. 复选框根据是否在 HvCheckboxGroup 中进行判断，计算属性 model 的 get、set 进行对应不同的数据处理
 
 ```html
 <template>
@@ -382,19 +382,19 @@ Vue.use(KvWebComponents);
 </template>
 <script>
   export default {
-    name: "KvCheckbox",
-    componentName: "KvCheckbox",
+    name: "HvCheckbox",
+    componentName: "HvCheckbox",
     data() {
       return {
         checkboxGroup: null
       };
     },
     computed: {
-      kvCheckboxGroup() {
+      hvCheckboxGroup() {
         if (this.checkboxGroup) return this.checkboxGroup;
         let parent = this.$parent;
         while (parent) {
-          if (parent.$options.componentName !== "KvCheckboxGroup") {
+          if (parent.$options.componentName !== "HvCheckboxGroup") {
             parent = parent.$parent;
           } else {
             this.checkboxGroup = parent;
@@ -407,27 +407,27 @@ Vue.use(KvWebComponents);
           if ({}.toString.call(this.value) === "[object Boolean]") {
             return this.value;
           }
-          if (!this.kvCheckboxGroup) return this.value;
-          return this.kvCheckboxGroup.value.includes(this.value);
+          if (!this.hvCheckboxGroup) return this.value;
+          return this.hvCheckboxGroup.value.includes(this.value);
         },
         set(value) {
-          if (!this.kvCheckboxGroup) {
+          if (!this.hvCheckboxGroup) {
             this.$emit("input", value);
             return;
           }
-          let checkValue = this.kvCheckboxGroup.value;
+          let checkValue = this.hvCheckboxGroup.value;
           const index = checkValue.findIndex(v => v == this.value);
           if (index > -1) {
             checkValue.splice(index, 1);
           } else {
             checkValue.push(this.value);
           }
-          this.kvCheckboxGroup.$emit("input", checkValue);
+          this.hvCheckboxGroup.$emit("input", checkValue);
         }
       },
       isDisabled() {
-        if (this.kvCheckboxGroup) {
-          return this.kvCheckboxGroup.disabled || this.disabled;
+        if (this.hvCheckboxGroup) {
+          return this.hvCheckboxGroup.disabled || this.disabled;
         }
         return this.disabled;
       }
@@ -452,7 +452,7 @@ Vue.use(KvWebComponents);
 
 :::snippet 单选框
 
-1. 单选框基本与复选框实现类似，不同的是单选框多个一起使用所以必须使用 KvRadioGroup，在组件中设置 provide
+1. 单选框基本与复选框实现类似，不同的是单选框多个一起使用所以必须使用 HvRadioGroup，在组件中设置 provide
 
 ```html
 <template>
@@ -462,10 +462,10 @@ Vue.use(KvWebComponents);
 </template>
 <script>
   export default {
-    name: "KvRadioGroup",
-    componentName: "KvRadioGroup",
+    name: "HvRadioGroup",
+    componentName: "HvRadioGroup",
     provide() {
-      return { kvRadioGroup: this };
+      return { hvRadioGroup: this };
     },
     props: {
       value: {
@@ -483,7 +483,7 @@ Vue.use(KvWebComponents);
 </style>
 ```
 
-2. 子组件 KvRadio 中 inject 依赖注入 KvRadioGroup 在通过 computed 拆分详细的 get 和 set 来取值和赋值
+2. 子组件 HvRadio 中 inject 依赖注入 HvRadioGroup 在通过 computed 拆分详细的 get 和 set 来取值和赋值
 
 ```html
 <template>
@@ -502,9 +502,9 @@ Vue.use(KvWebComponents);
 
 <script>
   export default {
-    name: "KvRadio",
-    componentName: "KvRadio",
-    inject: ["kvRadioGroup"],
+    name: "HvRadio",
+    componentName: "HvRadio",
+    inject: ["hvRadioGroup"],
     props: {
       value: {
         type: [Number, String],
@@ -515,15 +515,15 @@ Vue.use(KvWebComponents);
     computed: {
       model: {
         get() {
-          return this.kvRadioGroup.value;
+          return this.hvRadioGroup.value;
         },
         set(value) {
-          this.kvRadioGroup.$emit("input", value);
+          this.hvRadioGroup.$emit("input", value);
         }
       },
       isDisabled() {
-        if (this.kvRadioGroup) {
-          return this.kvRadioGroup.disabled || this.disabled;
+        if (this.hvRadioGroup) {
+          return this.hvRadioGroup.disabled || this.disabled;
         }
         return this.disabled;
       }
