--- a/src/notes/base/10ES6.md
+++ b/src/notes/base/10ES6.md
@@ -1,14 +1,22 @@
-# ES6
+:::
 
-## ES6介绍
+:::snippet ES6
+
+:::
+
+:::snippet ES6介绍
 
 ES6   ->  ECMA  标准
 任何人都可以向 标准委员会 (TC39), 要求更改语言标准
 提案变成标准，经历5个阶段：展示阶段、征求意见阶段、草案阶段、候选阶段。定案阶段(标准)
 
-## ES6环境:webpack3.x、Traceur
+:::
 
-## ES6定义(声明)变量
+:::snippet ES6环境:webpack3.x、Traceur
+
+:::
+
+:::snippet ES6定义(声明)变量
 
 - let a=12  块级作用域
    相当于之前之前的 var a=12;全局、函数作用域
@@ -23,7 +31,7 @@ ES6   ->  ECMA  标准
 
 - 案例
 
-~~~JavaScript
+```JavaScript
  let a = 12;
   function fn(){
     alert(a);  
@@ -38,14 +46,14 @@ ES6   ->  ECMA  标准
     let a = 5;  //TDZ 结束
      // let b = 12;
    }
-~~~
+```
 
 - const: 特性和let一样
   const定义变量不能修改
   const定义完变量，必须有值，不能后赋值，不能修改
   注意const定义值类型和引用类型的区别
 
-~~~JavaScript
+```JavaScript
  const a=123;
  const array=['语文','数学'];
  console.log( array[0]);
@@ -56,17 +64,19 @@ ES6   ->  ECMA  标准
  const bArray=Object.freeze(['语文','数学']);//冻结对象不可更改。
  console.log( bArray[0]);
  bArray.push('英文');//报错
-~~~
+```
 
 - 建议:以后 就用 let  不要在使用var
 
-## ES6解析赋值
+:::
+
+:::snippet ES6解析赋值
 
   非常有用，特别在做数据交互  ajax
 
   let [a,b,c] =[12,5, 6];
 
-~~~javascript
+```javascript
  <script>
         let [a, b, c] = [12, 5, 6];
         console.log(a, b, c); //12 5 6
@@ -135,9 +145,11 @@ ES6   ->  ECMA  标准
           show({});
         }
  </script>
-~~~
+```
 
-## 字符串模板
+:::
+
+:::snippet 字符串模板
 
 - 优点: 可以随意换行
 - ~${变量名字}~
@@ -190,7 +202,9 @@ ES6   ->  ECMA  标准
 </html>
 ```  
 
-## ES6字符串查找
+:::
+
+:::snippet ES6字符串查找
 
 - str.indexOf(要找的东西)   返回索引(位置) ，没找到返回-1
 - str.includes(要找的东西)   返回值  true/false
@@ -208,7 +222,9 @@ ES6   ->  ECMA  标准
         }
 ```
 
-## ES6函数变化
+:::
+
+:::snippet ES6函数变化
 
 函数变化:
 
@@ -297,7 +313,9 @@ show(1,2,3,4,5);
 2. 箭头函数里面没有arguments, 用  ‘...’
 3. 箭头函数不能当构造函数
 
-## 数组
+:::
+
+:::snippet 数组
 
 - 循环:
   
@@ -460,7 +478,9 @@ for(let val of arr.values()){  //有可能chrome版本不能用
    arr.includes() 包含元素
    str.includes() 包含字符串
 
-## 对象
+:::
+
+:::snippet 对象
 
 对象:json
 
@@ -523,7 +543,9 @@ new Vue({
     let json = {a:3, b:4};
     let json2 = {...json};
 
-## Promise:    承诺，许诺
+:::
+
+:::snippet Promise:    承诺，许诺
 
 - 作用:  解决异步回调问题
 
@@ -635,7 +657,9 @@ new Promise(userLogin).then(res=>{
 })
 ```
 
-## 模块化
+:::
+
+:::snippet 模块化
 
     js不支持模块化
     ruby   require
@@ -696,7 +720,9 @@ new Promise(userLogin).then(res=>{
     ES2017加  async  await:
     'use strict'以后默认就是严格模式
 
-## 程序中类
+:::
+
+:::snippet 程序中类
 
 ```javascript
 //ES5之前：
@@ -826,7 +852,9 @@ let p1 = new Person('Strive', 18);
         new LimitDrag('#div2');
 ```
 
-## symbol
+:::
+
+:::snippet symbol
 
 定义：let syml = Symbol('aaa');
 
@@ -838,7 +866,9 @@ let p1 = new Person('Strive', 18);
 
     4. 如果symbol作为key，用for in循环，出不来
 
-## generator
+:::
+
+:::snippet generator
 
 for .. of  自动遍历 generator
 return的东西，它不会遍历
