--- a/src/notes/vuecourse/01.md
+++ b/src/notes/vuecourse/01.md
@@ -123,7 +123,7 @@ var app5 = new Vue({
 })
 ```
 
-v-model (v-bind:model)指令，它能轻松实现表单输入和应用状态之间的双向绑定。
+v-model 指令，它能轻松实现表单输入和应用状态之间的双向绑定。
 
 ```html
 <div id="app-6">
