--- a/src/notes/vuecourse/04.md
+++ b/src/notes/vuecourse/04.md
@@ -1,25 +1,29 @@
 :::snippet 计算属性
+
 1. 计算属性是基于它们的依赖进行缓存的。
 2. 只在相关依赖发生改变时它们才会重新求值。
 
 ```javascript
 //计算属性 reversedMessage。我们提供的函数将用作属性 vm.reversedMessage 的 getter 函数：
 let vm = new Vue({
-  el: '#example',
+  el: "#example",
   data: {
-    message: 'Hello'
+    message: "Hello"
   },
   computed: {
     // 计算属性的 getter
-    reversedMessage: function () {
+    reversedMessage: function() {
       // `this` 指向 vm 实例
-      return this.message.split('').reverse().join('')
+      return this.message
+        .split("")
+        .reverse()
+        .join("");
     }
   }
-})
-console.log(vm.reversedMessage) // => 'olleH'
-vm.message = 'Goodbye'
-console.log(vm.reversedMessage) // => 'eybdooG'
+});
+console.log(vm.reversedMessage); // => 'olleH'
+vm.message = "Goodbye";
+console.log(vm.reversedMessage); // => 'eybdooG'
 ```
 
 ```html
@@ -32,65 +36,54 @@ console.log(vm.reversedMessage) // => 'eybdooG'
 :::
 
 :::snippet 计算属性缓存 vs 方法
+
 1. 计算属性只在相关依赖发生改变时它们才会重新求值。
 2. 方法 当触发重新渲染时，调用方法将总会再次执行函数。
 
 ```javascript
 let indexComputed = 0;
 let indexMethod = 0;
-let app02 = new Vue({
-  el: "#app02",
+let app = new Vue({
+  el: "#app",
   data: {
-    message: "翻转字符串",
-    hello: "Hello World",
-    title: "Hello World"
+    message: "Hello"
   },
   computed: {
     reversedMessage: function() {
-      //console.log('computed :reversedMessage;date:'+ Date.now());
       indexComputed++;
       return (
-        "reversedMessage" +
         this.message
           .split("")
           .reverse()
           .join("") +
-        Date.now()
+        " indexComputed:" +
+        indexComputed
       );
     }
   },
   methods: {
     reversedFun: function() {
-      //console.log('methods'+'reversedMessage');
-      //console.log('methods:reversedMessage;date:'+ Date.now());
       indexMethod++;
       return (
-        "reversedFun" +
         this.message
           .split("")
           .reverse()
           .join("") +
-        Date.now()
+        " indexMethod:" +
+        indexMethod
       );
     }
   }
 });
-
-console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); //indexComputed:1;indexMethod:1
-console.log(app02.reversedMessage); //reversedMessage串符字转翻1548173233202
-console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); //indexComputed:1;indexMethod:1
-console.log(app02.reversedFun()); //reversedFun串符字转翻1548173233208
-console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); //indexComputed:1;indexMethod:2
-app02.message = "message";
-console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); //indexComputed:1;indexMethod:2
-console.log(app02.reversedMessage);
-console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); //indexComputed:2;indexMethod:2
-console.log(app02.reversedFun());
-console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); //indexComputed:2;indexMethod:3
+console.log(app.reversedMessage); // olleH indexComputed:1
+console.log(app.reversedFun()); // olleH indexMethod:2
+app.message = "message";
+console.log(app.reversedMessage); //egassem indexComputed2
+console.log(app.reversedFun()); //egassem indexMethod3
 ```
 
 ```html
-<div id="app02">
+<div id="app">
   <p>Original Message：{{message}}</p>
   <p>Computer Reverse Message：{{reversedMessage}}</p>
   <p>reversedFun：{{reversedFun()}}</p>
@@ -101,75 +94,50 @@ console.log("indexComputed:" + indexComputed + ";indexMethod:" + indexMethod); /
 
 :::snippet 计算属性 vs 侦听属性
 
+1. 更通用的方式来观察和响应 Vue 实例上的数据变动：侦听属性。
+2.
+
 ```javascript
-let app03 = new Vue({
-  el: "#app03",
+let indexComputed = 0;
+let indexWatch = 0;
+let app2 = new Vue({
+  el: "#app-2",
   data: {
-    firstName: "ningyuan",
-    lastName: "xihuang",
-    fullName: "ningyuan xihuang"
+    firstName: "7000",
+    lastName: "huang",
+    quanming: "Foo Bar"
   },
   watch: {
     firstName: function(val) {
-      this.fullName = val + " " + this.lastName;
+      indexWatch++;
+      console.log("执行" + indexWatch + "次watch的firstName");
+      this.quanming = val + " " + this.lastName;
     },
     lastName: function(val) {
-      this.fullName = this.firstName + " " + val;
+      indexWatch++;
+      console.log("执行" + indexWatch + "次watch的lastName");
+      this.quanming = this.firstName + " " + val;
     }
   },
   computed: {
-    xingming: function() {
+    fullName: function() {
+      indexComputed++;
+      console.log("执行" + indexComputed + "次computed的fullName");
       return this.firstName + " " + this.lastName;
     }
   }
 });
-app03.firstName = "wuming";
-app03.firstName = "donghuang";
+console.log(app2.fullName); // 7000 huang
+console.log(app2.firstName); // 7000
+console.log(app2.lastName); // huang
+app2.firstName = "xiqian";
+console.log(app2.fullName); //xiqian huang
+console.log(app2.firstName); // xiqian
+console.log(app2.lastName); // huang
 ```
 
 ```html
-<div id="app03">
-  <p>firstName：{{firstName}}</p>
-  <p>lastName：{{lastName}}</p>
-  <p>fullName：{{fullName}}</p>
-  <p>fullName：{{xingming}}</p>
-</div>
-```
-
-:::
-
-:::snippet 计算属性的 setterh 和 getter
-
-```javascript
-let app04 = new Vue({
-  el: "#app04",
-  data: {
-    firstName: "ningyuan",
-    lastName: "xihuang"
-  },
-  computed: {
-    xingming: function() {
-      return this.firstName + " " + this.lastName;
-    },
-    fullName: {
-      // getter
-      get: function() {
-        return this.firstName + " " + this.lastName;
-      },
-      // setter
-      set: function(newValue) {
-        var names = newValue.split(" ");
-        this.firstName = names[0];
-        this.lastName = names[names.length - 1];
-      }
-    }
-  }
-});
-app04.fullName = "神魔非我 萧无名";
-```
-
-```html
-<div id="app04">
+<div id="app-2">
   <p>firstName：{{firstName}}</p>
   <p>lastName：{{lastName}}</p>
   <p>fullName：{{fullName}}</p>
@@ -179,56 +147,119 @@ app04.fullName = "神魔非我 萧无名";
 
 :::
 
+:::snippet 计算属性的 setter 和 getter
+
+```javascript
+let indexGet = 0;
+let indexSet = 0;
+let indexfirstName = 0;
+let indexlastName = 0;
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    firstName: "7000",
+    lastName: "huang",
+    quanming: "Foo Bar"
+  },
+  watch: {
+    firstName: function(val) {
+      indexfirstName++;
+      console.log("执行" + indexfirstName + "次dd的wwatch的firstName");
+      this.quanming = val + " " + this.lastName;
+    },
+    lastName: function(val) {
+      indexlastName++;
+      console.log("执行" + indexlastName + "次dd的watch的lastName");
+      this.quanming = this.firstName + " " + val;
+    }
+  },
+  computed: {
+    fullName: {
+      // getter
+      get: function() {
+        indexGet++;
+        console.log("执行" + indexGet + "次dd的computed的fullName的get");
+        return this.firstName + " " + this.lastName;
+      },
+      // setter
+      set: function(newValue) {
+        indexSet++;
+        console.log("执行" + indexSet + "次dd的computed的fullName的set");
+        var names = newValue.split(" ");
+        this.firstName = names[0];
+        this.lastName = names[names.length - 1];
+      }
+    }
+  }
+});
+console.log(app3.fullName); // 7000 huang
+console.log(app3.firstName); // 7000
+console.log(app3.lastName); // huang
+app3.fullName = "huang xiqian";
+```
+
+```html
+<div id="app-3">
+  <p>firstName：{{firstName}}</p>
+  <p>lastName：{{lastName}}</p>
+  <p>fullName：{{fullName}}</p>
+</div>
+```
+
+:::
+
 :::snippet 侦听器
+在这个示例中，使用 watch 选项允许我们执行异步操作 (访问一个 API)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。 
+
+```javascript
+let watchExampleVM = new Vue({
+  el: "#watch-example",
+  data: {
+    question: "",
+    answer: "I cannot give you an answer until you ask a question!"
+  },
+  watch: {
+    // 如果 `question` 发生改变，这个函数就会运行
+    question: function(newQuestion, oldQuestion) {
+      this.answer = "Waiting for you to stop typing...";
+      this.debouncedGetAnswer();
+    }
+  },
+  created: function() {
+    // `_.debounce` 是一个通过 Lodash 限制操作频率的函数。
+    // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
+    // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
+    // `_.debounce` 函数 (及其近亲 `_.throttle`) 的知识，
+    // 请参考：https://lodash.com/docs#debounce
+    this.debouncedGetAnswer = _.debounce(this.getAnswer, 500);
+  },
+  methods: {
+    getAnswer: function() {
+      if (this.question.indexOf("?") === -1) {
+        this.answer = "Questions usually contain a question mark. ;-)";
+        return;
+      }
+      this.answer = "Thinking...";
+      var vm = this;
+      axios
+        .get("https://yesno.wtf/api")
+        .then(function(response) {
+          vm.answer = _.capitalize(response.data.answer);
+        })
+        .catch(function(error) {
+          vm.answer = "Error! Could not reach the API. " + error;
+        });
+    }
+  }
+});
+```
 
 ```html
 <!-- 因为 AJAX 库和通用工具的生态已经相当丰富，Vue 核心代码没有重复 -->
 <!-- 提供这些功能以保持精简。这也可以让你自由选择自己更熟悉的工具。 -->
 <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
-<script>
-  var app05 = new Vue({
-    el: "#app05",
-    data: {
-      question: "",
-      answer: "I cannot give you an answer until you ask a question!"
-    },
-    watch: {
-      // 如果 `question` 发生改变，这个函数就会运行
-      question: function(newQuestion, oldQuestion) {
-        this.answer = "Waiting for you to stop typing...";
-        this.debouncedGetAnswer();
-      }
-    },
-    created: function() {
-      // `_.debounce` 是一个通过 Lodash 限制操作频率的函数。
-      // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
-      // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
-      // `_.debounce` 函数 (及其近亲 `_.throttle`) 的知识，
-      // 请参考：https://lodash.com/docs#debounce
-      this.debouncedGetAnswer = _.debounce(this.getAnswer, 500);
-    },
-    methods: {
-      getAnswer: function() {
-        if (this.question.indexOf("?") === -1) {
-          this.answer = "Questions usually contain a question mark. ;-)";
-          return;
-        }
-        this.answer = "Thinking...";
-        var vm = this;
-        axios
-          .get("https://yesno.wtf/api")
-          .then(function(response) {
-            vm.answer = _.capitalize(response.data.answer);
-          })
-          .catch(function(error) {
-            vm.answer = "Error! Could not reach the API. " + error;
-          });
-      }
-    }
-  });
-</script>
-<div id="app05">
+<div id="watch-example">
   <p>
     Ask a yes/no question:
     <input v-model="question" />
