20191224提交vue笔记 计算属性，监听

--- a/src/notes/vuecourse/04.md
+++ b/src/notes/vuecourse/04.md
@@ -93,9 +93,7 @@ console.log(app.reversedFun()); //egassem indexMethod3
 :::
 
 :::snippet 计算属性 vs 侦听属性
-
-1. 更通用的方式来观察和响应 Vue 实例上的数据变动：侦听属性。
-2.
+更通用的方式来观察和响应 Vue 实例上的数据变动：侦听属性。
 
 ```javascript
 let indexComputed = 0;
@@ -209,7 +207,7 @@ app3.fullName = "huang xiqian";
 :::
 
 :::snippet 侦听器
-在这个示例中，使用 watch 选项允许我们执行异步操作 (访问一个 API)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。 
+在这个示例中，使用 watch 选项允许我们执行异步操作 (访问一个 API)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。
 
 ```javascript
 let watchExampleVM = new Vue({
