--- a/src/notes/vuecourse/05.md
+++ b/src/notes/vuecourse/05.md
@@ -1,42 +1,38 @@
 :::snippet 绑定 HTML Class 对象语法
 
-> `v-bind:class` 指令也可以与普通的 class 属性共存。
+1. `v-bind:class` 指令也可以与普通的 class 属性共存。当 isActive 或者 hasError 变化时，class 列表将相应地更新。
+2. `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。所有值都是真值，除非它们被定义为 假值（即除 false、0、""、null、undefined 和 NaN 以外皆为真值）。
+3. 绑定的数据对象不必内联定义在模板里
 
 ```javascript
-let app01data = {
+let app = new Vue({
+  el: "#app",
+  data: {
     isActive: true,
-    hasError: false,divclass:undefined
-}
-let app01=new Vue({
-    el:"#app01",
-    data:app01data,
-})
-//id="app01"div的class="test active divclass"
-app01.hasError=true;//id="app01"div的class="test active text-danger divclass"
-
-let app02data = {
-    obj:{
-        divclass:true,
-        pclass:false,
-        objclass:1,
-        testclass:0,
-        spanclass:undefined,
+    hasError: false
+  }
+});
+app.hasError = true; //id="app01"div的class="test active text-danger divclass"
+let app2 = new Vue({
+  el: "#app-2",
+  data: {
+    classObject: {
+      active: true,
+      "text-danger": false
     }
-}
-let app02 = new Vue({
-    el: "#app02",
-    data: app02data,
-
-})
+  }
+});
 ```
 
 ```html
-<div id="app01" class="test" v-bind:class="{active:isActive, 'text-danger':hasError,'divclass':true}">
-</div>
-
-<div  id="app02" class="test" v-bind:class="obj">
-这个 div的class="test divclass objclass"
-</div>
+<!-- 结果渲染为  <div id="app" class="static active"></div> -->
+<div
+  id="app"
+  class="static"
+  v-bind:class="{ active: isActive, 'text-danger': hasError }"
+></div>
+<!-- 结果渲染为  <div id="app-2" class="active"></div> -->
+<div v-bind:class="classObject" id="app-2"></div>
 ```
 
 :::
@@ -44,77 +40,73 @@ let app02 = new Vue({
 :::snippet 绑定 HTML Class 数组语法
 
 ```javascript
-let app03data = {
-    classname1:"divclass",
-    classname2:"main"
-}
-let app03 = new Vue({
-    el: "#app03",
-    data: app03data,
-})
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    activeClass: "active",
+    errorClass: "text-danger"
+  }
+});
+let app4 = new Vue({
+  el: "#app-4",
+  data: {
+    isActive: false,
+    activeClass: "active",
+    errorClass: "text-danger"
+  }
+});
+let app5 = new Vue({
+  el: "#app-5",
+  data: {
+    isActive: true,
+    active: "active-div",
+    errorClass: "text-danger"
+  }
+});
 ```
 
 ```html
-<div id="app03" class="test" v-bind:class="[classname1,classname2]">
-这个 div的class="test divclass main"
-</div>
+<!-- 结果渲染为 <div id="app-3" class="active text-danger"></div> -->
+<div id="app-3" v-bind:class="[activeClass, errorClass]"></div>
+<!-- 结果渲染为 <div id="app-4" class="text-danger"></div> -->
+<div id="app-4" v-bind:class="[isActive ? activeClass : '', errorClass]"></div>
+<!-- 结果渲染为 <div id="app-5" class="active-div text-danger"></div> -->
+<div id="app-5" v-bind:class="[{ active: isActive }, errorClass]"></div>
 ```
 
 :::
 
-:::snippet 绑定 HTML Class 数组语法使用对象语法
+:::snippet 绑定 HTML Class 组件上
 
 ```javascript
-let app04data = {
-    classname1:"divclass",
-    classname2:"main",
-    isActive:false
-}
-let app04 = new Vue({
-    el: "#app04",
-    data: app04data,
-})
-//id="app04"div的class="test main"
-app04.isActive=true;//id="app01"div的class="test main divclass"
-```
-
-```html
-<div id="app04" class="test" v-bind:class="[{main:isActive},classname2]">
-
-</div>
-```
-
-:::
-
-:::snippet 绑定 HTML Class组件上
-
-```javascript
-Vue.component('my-component',
-{
-    data:function (){
-        return {
-            name:"羲皇",
-            age:'18',
-        }
-    },
-    template: '<div class="divClass"><p class="classFirst">Hello World! </p>'
-                +'<p class="classSecond">姓名：{{name}}</p><p class="classThird">年龄：{{age}}</p></div>'
-})
-let app08 = new Vue({
-    el: '#app08',
-    data:{
-        isActive:true,
-        active:"ceshi",
-        classname1: "divclass",
-    }
- })
+Vue.component("my-component", {
+  data: function() {
+    return {
+      name: "huang7000",
+      age: "18"
+    };
+  },
+  template: '<p class="foo bar">>姓名：{{name}} 年龄：{{age}} </p>'
+});
+let app6 = new Vue({
+  el: "#app-6",
+  data: {
+    isActive: true,
+    active: "active-div",
+    errorClass: "text-danger"
+  }
+});
 //id=app08的div里面div的class 渲染加上my-component的样式
 ```
 
 ```html
-<div id="app08">
-    <my-component class="baz boo" id="components-demo" v-bind:class="{active: isActive }"></my-component>
-    <my-component class="baz boo" id="components-demo" v-bind:class="[active,classname1]"></my-component>
+<div id="app-6">
+  <!-- 结果渲染为 <p  class="foo bar baz boo"> 姓名：huang7000  年龄：18 </p> -->
+  <my-component class="baz boo"></my-component>
+  <!-- 结果渲染为 <p  class="foo bar active-div text-danger"> 姓名：huang7000  年龄：18 </p> -->
+  <my-component
+    v-bind:class="[{ active: isActive }, errorClass]"
+  ></my-component>
 </div>
 ```
 
@@ -123,45 +115,44 @@ let app08 = new Vue({
 :::snippet 绑定内联样式对象语法
 
 ```javascript
-let app05data = {
-    colorValue: "red",
-    widthValue: 550,
-    fontSize: 25
-}
-let app05 = new Vue({
-    el: "#app05",
-    data: app05data,
-})
+let app7 = new Vue({
+  el: "#app-7",
+  data: {
+    activeColor: "red",
+    fontSize: 30
+  }
+});
 ```
 
 ```html
-<div id="app05" class="test" v-bind:style="{ color: colorValue, fontSize: fontSize + 'px',width:widthValue+'px' }">
-app05  style="color: red; font-size: 25px; width: 550px;"
-</div>
+<!-- 结果渲染为 <div id="app-7" style="color:red;fontSize: 30px;" > </div> -->
+<div
+  id="app-7"
+  v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }"
+></div>
 ```
 
 :::
 
 :::snippet 绑定内联样式对象语法
 
+> CSS 属性名可以用驼峰式 (camelCase) 或短横线分隔 (kebab-case，记得用引号括起来) 来命名
+
 ```javascript
-let app06data = {
+let app8 = new Vue({
+  el: "#app-8",
+  data: {
     styleObject: {
-        color: "red",
-        width: '550px',
-        fontSize: '25px'
+      color: "red",
+      fontSize: "13px"
     }
-}
-let app06 = new Vue({
-    el: "#app06",
-    data: app06data,
-})
+  }
+});
 ```
 
 ```html
-<div id="app06" class="test" v-bind:style="styleObject">
-app06  style="color: red; font-size: 25px; width: 550px;"
-</div>
+<!-- 结果渲染为 <div id="app-8" style="color:red;fontSize: 30px;" > </div> -->
+<div id="app-8" v-bind:style="styleObject"></div>
 ```
 
 :::
@@ -169,27 +160,25 @@ app06  style="color: red; font-size: 25px; width: 550px;"
 :::snippet 绑定内联样式数组语法
 
 ```javascript
-let app07data = {
+let app9 = new Vue({
+  el: "#app-9",
+  data: {
     styleObject: {
-        color: "red",
-        width: '550px',
-        fontSize: '18px'
+      color: "red",
+      width: "550px",
+      fontSize: "18px"
     },
     mainObejct: {
-        border: '1px',
-        fontSize: '36px'
+      border: "1px",
+      fontSize: "36px"
     }
-}
-let app07 = new Vue({
-    el: "#app07",
-    data: app07data,
-})
+  }
+});
 ```
 
 ```html
-<div id="app07" class="test" v-bind:style="[styleObject,mainObejct]">
- app07 style="color: red; width: 550px; font-size: 36px; border: 1px;"
- </div>
+<!-- 结果渲染为 <div id="app-9" style="color: red; width: 550px; font-size: 36px; border: 1px;"> </div> -->
+<div id="app-9" class="test" v-bind:style="[styleObject,mainObejct]"></div>
 ```
 
 :::
@@ -197,39 +186,46 @@ let app07 = new Vue({
 :::snippet 绑定内联样式组件上
 
 ```javascript
-Vue.component('component-demo', {
-    data: function () {
-        return {
-            name: "羲皇",
-            age: '18',
-        }
+Vue.component("component-demo", {
+  data: function() {
+    return {
+      name: "huang7000",
+      age: "18"
+    };
+  },
+  template: '<p class="foo bar">>姓名：{{name}} 年龄：{{age}} </p>'
+});
+let app10 = new Vue({
+  el: "#app-10",
+  data: {
+    styleObject: {
+      color: "red",
+      fontSize: "18px"
     },
-    template: '<div class="divClass"><p class="classFirst">Hello World! </p>' +
-        '<p class="classSecond">姓名：{{name}}</p><p class="classThird">年龄：{{age}}</p></div>'
-    })
-let app09 = new Vue({
-    el: '#app09',
-    data: {
-        styleObject: {
-            color: "red",
-            width: '550px',
-            fontSize: '18px'
-        },
-        mainObejct: {
-            border: '1px',
-            fontSize: '36px'
-        },
-        colorValue: "red",
-        widthValue: 550,
-        fontSize: 25
-    }
-})
+    mainObejct: {
+      border: "1px",
+      fontSize: "36px"
+    },
+    colorValue: "blue",
+    fontSize: 25
+  }
+});
 ```
 
 ```html
-<div id="app09">
-    <component-demo class="baz boo" id="components-demo" v-bind:style="[styleObject,mainObejct]"></component-demo>
-    <component-demo class="baz boo" id="components-demo" v-bind:style="{ color: colorValue, fontSize: fontSize + 'px',width:widthValue+'px' }"></component-demo>
+<div id="app-10">
+  <!-- 结果渲染为 <p  class="baz boo" style=" color:red;fontSize:36px;border:1px;"> 姓名：huang7000  年龄：18 </p> -->
+  <component-demo
+    class="baz boo"
+    id="components-demo"
+    v-bind:style="[styleObject,mainObejct]"
+  ></component-demo>
+  <!-- 结果渲染为 <p  class="baz boo" style=" color:blue;fontSize:25px;"> 姓名：huang7000  年龄：18 </p> -->
+  <component-demo
+    class="baz boo"
+    id="components-demo"
+    v-bind:style="{ color: colorValue, fontSize: fontSize + 'px' }"
+  ></component-demo>
 </div>
 ```
 
@@ -242,17 +238,10 @@ let app09 = new Vue({
 :::snippet 多重值
 
 > style 绑定中的属性提供一个包含多个值的数组，常用于提供多个带前缀的值。
+> 只会渲染数组中最后一个被浏览器支持的值。
 
 ```html
-<div :style="{ display: ['-webkit-box', '-ms-flexbox', 'flex'] }">
-
-</div>
+<div :style="{ display: ['-webkit-box', '-ms-flexbox', 'flex'] }"></div>
 ```
-
-:::
-
-:::snippet truthy 不是 true
-
-> 在 JavaScript 中，Truthy (真值)指的是在 布尔值 上下文中转换后的值为真的值。所有值都是真值，除非它们被定义为 falsy (即除了 false，0，""，''，``,document.all，null，undefined 和 NaN 外)。
 
 :::
