--- a/src/notes/vuecourse/06.md
+++ b/src/notes/vuecourse/06.md
@@ -1,34 +1,24 @@
 :::snippet `v-if`
 
+1. v-if 指令用于条件性地渲染一块内容。这块内容只会在指令的表达式返回 truthy 值的时候被渲染。
+2. 也可以用 `v-else` 添加一个`else 块`
+3. `v-else` 元素必须紧跟在带 `v-if` 或者 `v-else-if` 的元素的后面，否则它将不会被识别。
+
 ```javascript
-let app01 = new Vue({
-    el: "#app01",
-    data: {
-        ok: true
-    }
-})
-app01.ok = false;
-let app02 = new Vue({
-    el: "#app02",
-        data: {
-            ok: true
-        },
-})
+let app = new Vue({
+  el: "#app",
+  data: {
+    awesome: true
+  }
+});
+app.ok = false;
 ```
 
 ```html
-<div id="app01" >
-    <h1 v-if="ok">Yes</h1>
-    <h1 v-else>No</h1>
+<div id="app">
+  <h1 v-if="awesome">Vue is awesome!</h1>
+  <h1 v-else>Oh no 😢</h1>
 </div>
-<div  id="app02" >
-    <div v-if="Math.random() > 0.5">
-        Now you see me
-    </div>
-    <div v-else>
-        Now you don't
-    </div>
-</div >
 ```
 
 :::
@@ -36,51 +26,53 @@ let app02 = new Vue({
 :::snippet `<template>` 元素上使用 v-if 条件渲染分组
 
 ```javascript
-let app03 = new Vue({
-    el: "#app03",
-    data: {
-        ok: true
-    }
-})
+let app2 = new Vue({
+  el: "#app-2",
+  data: {
+    ok: true
+  }
+});
 ```
 
 ```html
-<div id="app03">
-    <template v-if="ok" >
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
-    </template>
-    <template v-else >
-        <p>template 1</p>
-        <p>template 2</p>
-    </template>
+<div id="app-2">
+  <template v-if="ok">
+    <h1>Title</h1>
+    <p>Paragraph 1</p>
+    <p>Paragraph 2</p>
+  </template>
+  <template v-else>
+    <p>template 1</p>
+    <p>template 2</p>
+  </template>
 </div>
 ```
 
 :::
 
 :::snippet `v-else-if`
+`v-else-if`，顾名思义，充当 `v-if` 的`else-if 块`，可以连续使用：
 
 ```javascript
-let app04 = new Vue({
-    el: "#app04",
-    data: {
-        type: '人'
-    }
-})
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    type: "人"
+  }
+});
 ```
 
 ```html
-<div id="app04">
-    <p v-if="type === '神'" >
-      神
-    </p>
-    <p v-else-if="type === '魔'" >
-     魔
-    </p>
-    <p v-else="type === 'B'" >
-      神魔非我
-    </p>
+<div id="app3">
+  <p v-if="type === '神'">
+    神
+  </p>
+  <p v-else-if="type === '魔'">
+    魔
+  </p>
+  <p v-else>
+    神魔非我
+  </p>
 </div>
 ```
 
@@ -88,31 +80,36 @@ let app04 = new Vue({
 
 :::snippet 用`key`管理可复用的元素
 
+1. 添加一个具有唯一值的 key 属性
+2. 输入框都将被重新渲染。
+3. `<label>`元素仍然会被高效地复用，因为它们没有添加 key 属性。
+
 ```javascript
-let app05 = new Vue({
-    el: "#app05",
-        data: {
-            loginType: 'name'
-        },
-    methods: {
-        toggleLoginType: function () {
-            return this.loginType = this.loginType === 'name' ? 'email' : 'name'
-        }
+let app4 = new Vue({
+  el: "#app-4",
+  data: {
+    loginType: "username"
+  },
+  methods: {
+    toggleLoginType: function() {
+      return (this.loginType =
+        this.loginType === "username" ? "email" : "username");
     }
-})
+  }
+});
 ```
 
 ```html
-<div id="app05">
-    <template v-if="loginType=='name'">
-        <label> name</label>
-        <input placeholder=" enter your name" key='name-input'>
-    </template>
-    <template v-else>
-        <label>email</label>
-        <input placeholder=" enter your email" key='email-input'>
-    </template>
-    <button @click="toggleLoginType">Toggle login type</button>
+<div id="app-4">
+  <template v-if="loginType=='username'">
+    <label> username</label>
+    <input placeholder=" enter your username" key="username-input" />
+  </template>
+  <template v-else>
+    <label>email</label>
+    <input placeholder=" enter your email" key="email-input" />
+  </template>
+  <button @click="toggleLoginType">Toggle login type</button>
 </div>
 ```
 
@@ -120,24 +117,25 @@ let app05 = new Vue({
 
 :::snippet `v-show`
 
-> 带有 v-show 的元素始终会被渲染并保留在 DOM 中。v-show 只是简单地切换元素的 CSS 属性 display。
+带有 v-show 的元素始终会被渲染并保留在 DOM 中。v-show 只是简单地切换元素的 CSS 属性 display。
+
 > 注意，v-show 不支持`<template>`元素，也不支持 v-else。
 
 ```javascript
-let app06 = new Vue({
-    el: "#app06",
-    data: {
-        ok: true
-    }
-})
+let app5 = new Vue({
+  el: "#app-5",
+  data: {
+    ok: true
+  }
+});
 ```
 
 ```html
-<div id="app06">
-    <template v-show="ok" >
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
-    </template>
+<div id="app-5">
+  <template v-show="ok">
+    <p>Paragraph 1</p>
+    <p>Paragraph 2</p>
+  </template>
 </div>
 ```
 
@@ -145,13 +143,13 @@ let app06 = new Vue({
 
 :::snippet `v-if` vs `v-show`
 
-1. v-if 是“真正”的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当地被销毁和重建。
+1. v-if 是`真正`的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当地被销毁和重建。
 2. v-if 也是惰性的：如果在初始渲染时条件为假，则什么也不做。——直到条件第一次变为真时，才会开始渲染条件块。
 3. v-show 就简单得多——不管初始条件是什么，元素总是会被渲染，并且只是简单地基于 CSS 进行切换。
 4. v-if 有更高的切换开销，而 v-show 有更高的初始渲染开销。
 5. 如果需要非常频繁地切换，则使用 v-show 较好；如果在运行时条件很少改变，则使用 v-if 较好。
-
-:::
+   > v-if 有更高的切换开销，而 v-show 有更高的初始渲染开销。因此，如果需要非常频繁地切换，则使用 v-show 较好；如果在运行时条件很少改变，则使用 v-if 较好。
+   > :::
 
 :::snippet `v-if`与`v-for`一起使用
 
