--- a/src/notes/vuecourse/07.md
+++ b/src/notes/vuecourse/07.md
@@ -1,37 +1,31 @@
 :::snippet 'v-for' 把一个数组对应为一组元素
 
-> `of` 替代 `in` 作为分隔符，因为它是最接近 `JavaScript` 迭代器的语法
+1. 我们可以用 v-for 指令基于一个数组来渲染一个列表。
+2. v-for 指令需要使用 item in items 形式的特殊语法，其中 items 是源数据数组，而 item 则是被迭代的数组元素的别名。
+3. `of` 替代 `in` 作为分隔符，因为它是最接近 `JavaScript` 迭代器的语法
+4. v-for 还支持一个可选的第二个参数，即当前项的索引。
 
 ```javascript
-let app01 = new Vue({
-    el: "#app01",
-    data: {
-        parentMessage: 'Parent',
-        items: [
-            {
-                message: 'Foo',
-                tiltle:'ceshi001'
-            },
-            {
-                message: 'Bar',
-                tiltle:'ceshi002'
-            }
-        ]
-     }
-})
+var example1 = new Vue({
+  el: "#example-1",
+  data: {
+    items: [{ message: "Foo" }, { message: "Bar" }],
+    parentMessage: "parent"
+  }
+});
 ```
 
 ```html
-<ul id="app01">
-    <li v-for="item in items">
-        {{ item }}
-    </li>
-    <li v-for="item in items">
-        {{ item.message }}
-    </li>
-        <li v-for="(item, index) in items">
-            {{ parentMessage }} - {{ index }} - {{ item.message }}
-        </li>
+<ul id="example-1">
+  <li v-for="item in items">
+    {{ item.message }}
+  </li>
+  <li v-for="item of items">
+    {{ item.message }}
+  </li>
+  <li v-for="(item, index) in items">
+    {{ parentMessage }} - {{ index }} - {{ item.message }}
+  </li>
 </ul>
 ```
 
@@ -45,54 +39,48 @@ let app01 = new Vue({
 4. 在遍历对象时，是按 Object.keys() 的结果遍历，但是不能保证它的结果在不同的 JavaScript 引擎下是一致的。
 
 ```javascript
-let app02 = new Vue({
-    el: "#app02",
-    data: {
-        parentMessage: 'Parent',
-        obj: {
-            name:'xihuang',
-            age:18,
-            phone:'88888'
-        }
-     }
-})
+let vForObject = new Vue({
+  el: "#v-for-object",
+  data: {
+    object: {
+      title: "How to do lists in Vue",
+      author: "Jane Doe",
+      publishedAt: "2016-04-10"
+    }
+  }
+});
 ```
 
 ```html
-<ul id="app02">
-    <li v-for="value in obj">
-        {{ value }}
+<div id="v-for-object">
+  <ul class="demo">
+    <li v-for="value in object">
+      {{ value }}
     </li>
-    <li>
-       ...............
-    </li>
-    <li v-for="(value, key) in obj">
-        {{ key }} : {{ value }}
-    </li>
-    <li>
-       ...............
-    </li>
-    <li v-for="(value, key, index) in object">
-        {{ index }}. {{ key }}: {{ value }}
-    </li>
-     <li>
-       ...............
-    </li>
-    <li v-for="key in object.keys() ">
-       {{ key }}
-    </li>
+  </ul>
+  <div v-for="(value, name) in object">
+    {{ name }}: {{ value }}
+  </div>
+  <div v-for="(value, name, index) in object">
+    {{ index }}. {{ name }}: {{ value }}
+  </div>
+  <div v-for="key in object.keys()">
+    {{ key }}
+  </div>
+</div>
 ```
 
 :::
 
 :::snippet `key`
 
+> 不提供`key` 只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
 > 尽可能在使用`v-for`时提供 `key`，除非遍历输出的 `DOM` 内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
 > `key`它是 `Vue` 识别节点的一个通用机制
 
 ```javascript
-let app03 = new Vue({
-    el: "#app03",
+let app = new Vue({
+    el: "#app",
     data: {
         parentMessage: 'Parent',
         items: [
@@ -112,11 +100,9 @@ let app03 = new Vue({
 ```
 
 ```html
-<ul id="app03">
-    <li v-for="item in items" :key="item.id">
-        {{ item }}
-    </li>
-</ul>
+<div v-for="item in items" v-bind:key="item.id" id="app">
+  {{item}}
+</div>
 ```
 
 :::
@@ -130,64 +116,79 @@ let app03 = new Vue({
 3. shift() 方法用于删除数组的第一个元素，并返回该元素。
 4. unshift() 方法用于在数组的第一个位置添加元素，并返回添加新元素后的数组长度。app03.items.unshift({id:5,name:'小西',age:16,phone:'6666'})
 5. splice() 方法用于删除原数组的一部分成员，并可以在删除的位置添加新的数组成员，返回值是被删除的元素。注意，该方法会改变原数组。
-6. sort()  方法对数组成员进行排序，默认是按照字典顺序排序。排序后，原数组将被改变。
+6. sort() 方法对数组成员进行排序，默认是按照字典顺序排序。排序后，原数组将被改变。
 7. reverse() 方法用于颠倒排列数组元素，返回改变后的数组。
 
 ```javascript
 var arr = [];
 
-arr.push(1) // 1
-arr.push('a') // 2
-arr.push(true, {}) // 4
-arr // [1, 'a', true, {}]
+arr.push(1); // 1
+arr.push("a"); // 2
+arr.push(true, {}); // 4
+arr; // [1, 'a', true, {}]
 
-arr.pop() // {}
-arr // [1, 'a', true]
+arr.pop(); // {}
+arr; // [1, 'a', true]
 
-a.shift() // 1
-a // [ 'a', true]
-a.unshift('x'); // 3
-a // ['x', 'a', true]
+a.shift(); // 1
+a; // [ 'a', true]
+a.unshift("x"); // 3
+a; // ['x', 'a', true]
 
-a.splice(1, 1) // ['a']
-a // ['x',true]
+a.splice(1, 1); // ['a']
+a[(4, 2, 3, 1)]; // ['x',true]
+a.sort(); // [1, 2, 3, 4]
 
-[4, 2, 3, 1].sort()// [1, 2, 3, 4]
-
-a.reverse() // [true,'a','x']
-a // [true,'a','x']
-a.reverse() // [true,'a','x']
-a // [true,'a','x']
+a.reverse(); // [true,'a','x']
+a; // [true,'a','x']
 ```
 
 :::
 
+:::snippet 替换数组
+
+非变异 (non-mutating method) 方法 它们不会改变原始数组，而总是返回一个新数组。，原数组将被改变。
+
+1. filter()
+2. concat()
+3. slice()
+
+```javascript
+var arr = [1, 2, 3, 4];
+arr = arr.filter(function(item) {
+  return item / 2 === 0;
+});
+arr; // 2,4
+```
+
+:::
 :::snippet 数组注意事项
 
 > 由于 JavaScript 的限制，Vue 不能检测以下变动的数组
+
 1. 当你利用索引直接设置一个项时，例如：vm.items[indexOfItem] = newValue
 2. 当你修改数组的长度时，例如：vm.items.length = newLength
 
 ```javascript
-let app04 = new Vue({
+let app2 = new Vue({
+  el: "#app-2",
   data: {
-    items: ['a', 'b', 'c']
+    items: ["a", "b", "c"]
   }
-})
-app04.items[1] = 'x' // 不是响应性的
-app04.items.length = 2 // 不是响应性的
+});
+app2.items[1] = "x"; // 不是响应性的
+app2.items.length = 2; // 不是响应性的
 
-Vue.set(app04.items, 1, 'x')//响应性的
-app04.$set(app04.items, indexOfItem, newValue)
+Vue.set(app2.items, 1, "x"); //响应性的
+app2.$set(app2.items, indexOfItem, newValue);
 
-app04.items.splice(1, 1, 'aaa')//响应性的 先删除x 再 添加 'aaa'
-app04.items.splice(newLength)//响应性的 vm.items.length = newLength
+app2.items.splice(1, 1, "aaa"); //响应性的 先删除x 再 添加 'aaa'
+app2.items.splice(newLength); //响应性的 vm.items.length = newLength
 ```
 
 ```html
-<ul id="app04">
-    <li v-for="item in items">
-    </li>
+<ul id="app-2">
+  <li v-for="item in items"></li>
 </ul>
 ```
 
@@ -196,32 +197,32 @@ app04.items.splice(newLength)//响应性的 vm.items.length = newLength
 :::snippet 数组对象`for`
 
 ```javascript
-let app05 = new Vue({
-    el: "#app05",
-    data: {
-        items:[
-            {
-                id: 1,
-                name: '小强',
-                age: 18,
-                phone: '11111'
-            },
-            {
-                id: 8,
-                name: '小白',
-                age: 19,
-                phone: '22222'
-            }
-        ]
-    }
-})
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    items: [
+      {
+        id: 1,
+        name: "小强",
+        age: 18,
+        phone: "11111"
+      },
+      {
+        id: 8,
+        name: "小白",
+        age: 19,
+        phone: "22222"
+      }
+    ]
+  }
+});
 ```
 
 ```html
-<ul id="app05">
-    <li v-for="item in items">
-        <p v-for="value in item">{{value}}</P>
-    </li>
+<ul id="app3">
+  <li v-for="item in items">
+    <p v-for="value in item">{{value}}</p>
+  </li>
 </ul>
 ```
 
@@ -234,44 +235,45 @@ let app05 = new Vue({
 > 嵌套对象添加响应式属性
 
 ```javascript
-let app06 = new Vue({
+let app4 = new Vue({
+  el: "#app-4",
   data: {
-   name:'xihuang'
+    name: "xihuang"
   }
-})
-app06.age = 18// 不是响应性的
-Vue.set(app06, 'age', 27)//响应性的
+});
+app4.age = 18; // 不是响应性的
+Vue.set(app4, "age", 27); //响应性的
 
-let app07 = new Vue({
+let app5 = new Vue({
+  el: "#app-5",
   data: {
-      student:{
-        name:'xihuang'
+    student: {
+      name: "xihuang"
     }
   }
-})
-app07.student.age = 18// 不是响应性的
-Vue.set(app07.student, 'age', 27)//响应性的
-app07.$set(app07.student, 'age', 27)//响应性的
+});
+app5.student.age = 18; // 不是响应性的
+Vue.set(app5.student, "age", 27); //响应性的
+app07.$set(app5.student, "age", 27); //响应性的
 
-
-Object.assign(app07.student , {
+Object.assign(app5.student, {
   age: 27,
-  favoriteColor: 'Vue Green'
-})//不是响应性的
+  favoriteColor: "Vue Green"
+}); //不是响应性的
 
-app07.student = Object.assign({}, app07.student, {
-    phone: '8888',
-    favoriteColor: 'Vue Green'
-})//响应性的
+app5.student = Object.assign({}, app5.student, {
+  phone: "8888",
+  favoriteColor: "Vue Green"
+}); //响应性的
 ```
 
 ```html
-<ul id="app06">
+<ul id="app-4">
     <li v-for="item in items">
        {{item}}
     </li>
 </ul>
-<ul id="app07">
+<ul id="app-5">
     <li v-for="item in items">
       {{item}}
     </li>
@@ -284,36 +286,36 @@ app07.student = Object.assign({}, app07.student, {
 :::snippet 显示过滤/排序结果
 
 ```javascript
-let app08 = new Vue({
-    el: "#app08",
-    data: {
-        numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-    },
-    computed: {
-        evenNumbers: function () {
-            return this.numbers.filter(function (number) {
-                return number % 2 === 0
-            })
-        }
-    },
-    methods: {
-        even: function (numbers) {
-            return numbers.filter(function (number) {
-                return number % 3 === 0
-            })
-        }
+let app6 = new Vue({
+  el: "#app-6",
+  data: {
+    numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  },
+  computed: {
+    evenNumbers: function() {
+      return this.numbers.filter(function(number) {
+        return number % 2 === 0;
+      });
     }
-})
+  },
+  methods: {
+    even: function(numbers) {
+      return numbers.filter(function(number) {
+        return number % 3 === 0;
+      });
+    }
+  }
+});
 ```
 
 ```html
-<ul id="app08">
-    <li v-for="item in evenNumbers">
-        {{item}}
-    </li>
-    <li v-for="item in even(numbers)">
-        {{item}}
-    </li>
+<ul id="app-6">
+  <li v-for="item in evenNumbers">
+    {{item}}
+  </li>
+  <li v-for="item in even(numbers)">
+    {{item}}
+  </li>
 </ul>
 ```
 
@@ -321,18 +323,18 @@ let app08 = new Vue({
 
 :::snippet 一段取值范围的 `v-for`
 
+> n 必须大于等于 1，从 1 开始到 n
+
 ```javascript
-let app09 = new Vue({
-    el: "#app09",
-})
+let app7 = new Vue({
+  el: "#app-7"
+});
 ```
 
 ```html
-<ul id="app09">
-    <li v-for="item in 9">
-        {{item}}
-    </li>
-</ul>
+<div id="app-7">
+  <span v-for="n in 10">{{ n }} </span>
+</div>
 ```
 
 :::
@@ -340,23 +342,23 @@ let app09 = new Vue({
 :::snippet `v-for` on a `<template>`
 
 ```javascript
-let app10 = new Vue({
-    el: "#app10",
-    data:{
-        items:[
-            {msg:'shenme',id:1},
-            {msg:'dongxi',id:11}
-        ]
-    }
-})
+let app8 = new Vue({
+  el: "#app-8",
+  data: {
+    items: [
+      { msg: "shenme", id: 1 },
+      { msg: "dongxi", id: 11 }
+    ]
+  }
+});
 ```
 
 ```html
-<ul id="app10">
-    <template v-for="item in items">
-        <li>{{ item.msg }}</li>
-        <li class="divider" role="presentation"></li>
-    </template>
+<ul id="app-8">
+  <template v-for="item in items">
+    <li>{{ item.msg }}</li>
+    <li class="divider" role="presentation"></li>
+  </template>
 </ul>
 ```
 
@@ -365,48 +367,48 @@ let app10 = new Vue({
 :::snippet `v-for` with `v-if`
 
 ```javascript
-let app11 = new Vue({
-    el: "#app11",
-    data: {
-        items: [
-            {
-                msg: 'shenme',
-                id: 1,
-                isshow: true
-            },
-            {
-                msg: 'dongxi',
-                id: 2,
-                isshow: true
-            },
-            {
-                msg: 'nubi',
-                id: 4,
-                isshow: false
-            },
-            {
-                msg: 'laji',
-                id: 5,
-                isshow: false
-            },
-            {
-                msg: 'sb',
-                id: 8,
-                isshow: true
-            },
-        ]
-    }
-})
+let app9 = new Vue({
+  el: "#app-9",
+  data: {
+    items: [
+      {
+        msg: "shenme",
+        id: 1,
+        isshow: true
+      },
+      {
+        msg: "dongxi",
+        id: 2,
+        isshow: true
+      },
+      {
+        msg: "nubi",
+        id: 4,
+        isshow: false
+      },
+      {
+        msg: "laji",
+        id: 5,
+        isshow: false
+      },
+      {
+        msg: "sb",
+        id: 8,
+        isshow: true
+      }
+    ]
+  }
+});
 ```
 
 ```html
-<div id="app11">
-    <ul v-if="items.length">
-        <li v-for="item in items" v-if="item.isshow">
-            {{ item }}
-        </li>
-    </ul>
-    <p v-else>No items left!</p>
+<div id="app-9">
+  <ul v-if="items.length">
+    <li v-for="item in items" v-if="item.isshow">
+      {{ item }}
+    </li>
+  </ul>
+  <p v-else>No items left!</p>
 </div>
 ```
 
@@ -414,109 +416,71 @@ let app11 = new Vue({
 
 :::snippet 组件的`v-for`
 
+> 当在组件上使用 v-for 时，key 现在是必须的。
+
 ```javascript
-Vue.component('component-first', {
-    props: ['post'],
-    data: function () {
-        return {
-            items: this.post
-        }
-    },
-    template: '<ul > <li v-for="(value,key) in post">{{key}}:{{value}}</li> </ul>'
-})
-let app12=   new Vue({
-    el: '#app12',
-    data: {
-        posts: [
-            {
-                id: 1,
-                title: 'My journey with Vue',
-                name:'ceshi '
-            },
-            {
-                id: 2,
-                title: 'Blogging with Vue',
-                name:'测试'
-            },
-            {
-                id: 3,
-                title: 'Why Vue is so fun' ,
-                name:'随便'
-            }
-        ]
+Vue.component("todo-item", {
+  template: "\
+    <li>\
+      {{ title }}\
+      <button v-on:click=\"$emit('remove')\">Remove</button>\
+    </li>\
+  ",
+  props: ["title"]
+});
+
+new Vue({
+  el: "#todo-list-example",
+  data: {
+    newTodoText: "",
+    todos: [
+      {
+        id: 1,
+        title: "Do the dishes"
+      },
+      {
+        id: 2,
+        title: "Take out the trash"
+      },
+      {
+        id: 3,
+        title: "Mow the lawn"
+      }
+    ],
+    nextTodoId: 4
+  },
+  methods: {
+    addNewTodo: function() {
+      this.todos.push({
+        id: this.nextTodoId++,
+        title: this.newTodoText
+      });
+      this.newTodoText = "";
     }
-})
+  }
+});
 ```
 
 ```html
-<div id="app12">
-    <component-first v-for="post in posts" v-bind:key="post.id"  v-bind:post="post"></component-first>
-</div>
-```
-
-:::
-
-:::snippet 组件的`v-for`
-
-```javascript
-Vue.component('node-item', {
-    template: '\ <li>\ {{ title }}\ <button v-on:click="$emit(\'remove\')">Remove</button>\ </li>\ ',
-    props: ['title']
-})
-let app13 = new Vue({
-    el: '#app13',
-    data: {
-        newNodeText: '',
-        nodes: [{
-                id: 1,
-                title: 'Do the dishes',
-            },
-            {
-                id: 2,
-                title: 'Take out the trash',
-            },
-            {
-                id: 3,
-                title: 'Mow the lawn'
-            }
-        ],
-        nextNodeId: 4
-    },
-    methods: {
-        addNewNode: function () {
-            if (this.newNodeText == '') {
-                alert('不能为空');
-                return;
-            }
-            let newNodeTextValue=this.newNodeText;
-            let someResult =this.nodes.some(function (item, index, array) {
-                return (item.title ==newNodeTextValue);
-            });
-            if(someResult){
-                alert('已存在');
-                return;
-            }  
-            this.nodes.push({
-                id: this.nextNodeId++,
-                title: this.newNodeText
-            })
-            this.newNodeText = ''
-        }
-    }
-})
-```
-
-```html
-<div id="app13">
-    <form v-on:submit.prevent="addNewNode">
-        <label for="new-Node"> Add a Node</label>
-        <input v-model="newNodeText" id="newNode" placeholder="Enter A Node"></input>
-        <button> Add </button>
-    </form>
-    <ul>
-        <li is="node-item" v-for="(node, index) in nodes" v-bind:key="node.id" v-bind:title="node.title"
-            v-on:remove="nodes.splice(index, 1)"></li>
-    </ul>
+<div id="todo-list-example">
+  <form v-on:submit.prevent="addNewTodo">
+    <label for="new-todo">Add a todo</label>
+    <input
+      v-model="newTodoText"
+      id="new-todo"
+      placeholder="E.g. Feed the cat"
+    />
+    <button>Add</button>
+  </form>
+  <ul>
+    <li
+      is="todo-item"
+      v-for="(todo, index) in todos"
+      v-bind:key="todo.id"
+      v-bind:title="todo.title"
+      v-on:remove="todos.splice(index, 1)"
+    ></li>
+  </ul>
 </div>
 ```
 
