--- a/src/notes/vuecourse/07.md
+++ b/src/notes/vuecourse/07.md
@@ -121,7 +121,6 @@ let app = new Vue({
 
 ```javascript
 var arr = [];
-
 arr.push(1); // 1
 arr.push("a"); // 2
 arr.push(true, {}); // 4
@@ -130,28 +129,46 @@ arr; // [1, 'a', true, {}]
 arr.pop(); // {}
 arr; // [1, 'a', true]
 
-a.shift(); // 1
-a; // [ 'a', true]
-a.unshift("x"); // 3
-a; // ['x', 'a', true]
+arr.shift(); // 1
+arr; // [ 'a', true]
+arr.unshift("x"); // 3
+arr; // ['x', 'a', true]
+// 1:删除的功能 splice(index,count) 
+// index:开始位置的索引 count:要删除元素的个数 
+// 返回的是包含被删除元素的数组对象
+arr = ["a", "b", "c", "d"];
+var newArr = arr.splice(1, 2); //会把b,c两个元素给删除掉
+console.log(arr); //['a','d']
+console.log(newArr); //返回['b','c']
+// 2:插入功能 splice(index,0,value)
+// index:插入元素的索引值 value:插入的值
+// 返回的是空数组
+arr = ["a", "b", "c", "d"];
+newArr1 = arr.splice(2, 0, "张三");
+console.log(arr); //输出=['a','b','张三','c','d']
+console.log(newArr1); //[]
+// 3:替换功能 splice(index,num,value) 
+// index:开始的索引位置 num:删除项的数(如果num为0，就是插入功能) value:插入的值
+// 返回:返回的是包含被删除的元素的数组对象
+arr = ["a", "b", "c", "d"];
+newArr2 = arr.splice(2, 2, "张三", "李四");
+console.log(arr); //输出=['a','b','张三','李四']
+console.log(newArr2); //输入['c','d']
 
-a.splice(1, 1); // ['a']
-a[(4, 2, 3, 1)]; // ['x',true]
-a.sort(); // [1, 2, 3, 4]
-
-a.reverse(); // [true,'a','x']
-a; // [true,'a','x']
+arr = [4, 2, 3, 1];
+arr.sort(); // [1, 2, 3, 4]
+arr.reverse(); // [4, 3, 2, 1]
 ```
 
 :::
 
-:::snippet 替换数组
+:::snippet 非变异方法
 
-非变异 (non-mutating method) 方法 它们不会改变原始数组，而总是返回一个新数组。，原数组将被改变。
+非变异 (non-mutating method) 方法 它们不会改变原始数组，而总是返回一个新数组。
 
-1. filter()
-2. concat()
-3. slice()
+1. filter() 创建一个新的数组，新数组中的元素是通过检查指定数组中符合条件的所有元素。
+2. concat() 连接两个或更多的数组，并返回结果。
+3. slice() 它能够基于当前数组中的一个或多个项创建一个新数组。
 
 ```javascript
 var arr = [1, 2, 3, 4];
@@ -159,6 +176,14 @@ arr = arr.filter(function(item) {
   return item / 2 === 0;
 });
 arr; // 2,4
+var arr1 = ["red", "green"];
+var arr2 = ["blue", "yellow"];
+var arr3 = arr1.concat(arr2); //'red', 'green', 'blue', 'yellow'
+var colors = ["red", "green", "blue", "yellow", "purple"]; //  red,green,blue,yellow,purple
+// 在只有一个参数的情况下，slice()方法返回从该参数指定位置开始到当前数组末尾的所有项。
+var colors2 = colors.slice(1); //  green,blue,yellow,purple
+// 两个参数，该方法返回起始和结束位置之间的项-----但不包括结束位置的项。
+var colors3 = colors.slice(1, 4); //  green,blue,yellow
 ```
 
 :::
